# uml-copilot-v3

./: .gitattributes  .gitignore  README.md  create_flowchart.py
agent/: .env.example  langgraph.json  pyproject.toml
agent/odoo_agent/: graph.py  prompts.py  schemas.py  state.py
agent/uml_agent/: api.py  graph.py  schemas.py  state.py
docs/: AGENT_CHAT_UI_ADAPTER.md  INTEGRATION.md
frontend/: .env.example  .npmrc  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/prototype/: odoo-renderer.tsx
frontend/components/prototype/views/: dashboard-view.tsx  form-view.tsx  list-view.tsx
frontend/components/studio/: chat-panel.tsx  studio-header.tsx  studio-layout.tsx  uml-chat.tsx  uml-header.tsx  use-prototype-sync.ts  version-panel.tsx
frontend/components/uml/: excel-import.tsx  relation-editor.tsx  table-editor.tsx  table-node.tsx  uml-workspace.tsx
frontend/lib/: i18n.tsx  locale-wrapper.tsx
frontend/stores/: prototype-store.ts  uml-store.ts
frontend/types/: agent-state.ts  prototype-schema.ts  uml-schema.ts
test/: online_education_test_data.xlsx  在线教育测试数据表中文版.xlsx
