[project]
name = "uml-copilot-agent"
version = "0.1.0"
description = "LangGraph agent for conversational Odoo prototype generation"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.1",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "python-multipart>=0.0.12",
  "python-calamine>=0.3.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["uml_agent*", "odoo_agent*"]
